--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 playsinline
                 class="absolute h-full w-full object-cover opacity-75"
             >
-                <source src="/background.mp4" type="video/mp4">
+                <source src="./background.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -41,7 +41,7 @@
                     <p class="text-lg mb-12 text-gray-600">
                         Passionate about leveraging data and technology to drive business transformation
                     </p>
-                    <a href="/portfolio.html" 
+                    <a href="./portfolio.html" 
                        class="inline-flex items-center px-6 py-3 text-lg font-medium text-white bg-blue-800 rounded-lg hover:bg-blue-700 transition-colors">
                         View My Portfolio
                         <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
